- VerbatimElement as regular/interpreting element - rendering json bytes to string target after byte outstream is closed